--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
     <!DOCTYPE html>
-    <!-- saved from url=(0022)https://aaaaaa.net/ -->
+    <!-- saved from url=(0022)https://ktxxxx0828.github.io/KTsite/ -->
      <title>K_xXxX</title>
       <link rel="shortcut icon" href="Aqua.ico">
        <html lang="en-US">
@@ -10,50 +10,55 @@
         please join discord↓
         discord.gg/uBhTBaQy4K
        ">
-       <div class="fadein">
-         <div class="box fadeIn">
-          </div>
-         <div class="box fadeRight">
-       <div class="fadeIn2">
+       <div class="Image"></div>
+       <a class="header-title">KTsite</a>
+       <a class="header-title2">The Official KTsites.</a>
+       <a class="header-title3">Plz sub to my channel, and join my discord.</a>
+       <div class="scroll-down"></div>
        <header>
          <div class="container">
           <div class="header-left">
-           </div>
+            </div>
+          </div>
             <div class="header-right">
-             <a href="#">Top</a>
-           <a href="https://discord.gg/uBhTBaQy4K">Discord</a>
-          <a href="https://Youtube.com/@KTontop">youtube</a>
+           <a class="head" href="https://discord.gg/uBhTBaQy4K">Discord</a>
+          <a class="head" href="https://Youtube.com/@KTontop">youtube</a>
         </a>
          </div>
        </div>
        </header>
        <link rel="stylesheet" type="text/css" href="stylesheet.css">
-       <link rel="style" type="text/css" href="stylesheet.css">
-       <script src="smooth" type="text/javascript" href="smooth.js"></script>
         <h1><h1>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
       </head>
-    </html>
     <html lang="en_US">
-      <h4>ㅤㅤ</h4>
-         <h1 class="Download">Download</h1>
-         <a href="#" class="btn sonota" onclick="location.href='https://apkadmin.com/30nn9z4h7cbd/________________________________________________________feat.______________2.4.0_mod_signed_fix.apk.html'">Project_sekai_mod_apk</a>
-         <a href="#" class="btn sonota" onclick="location.href='https://uploadrar.com/9ic1kbtbami0'">Youkai_watch_punipuni_mod_apk</a>
-         <a href="#" class="btn sonota" onclick="location.href='https://github.com/disepi/ambrosial/releases/tag/1.5'">Ambrosial_latest_releases</a>
-         <a href="#" class="btn sonota" onclick="location.href='https://horion.download'">Horion_injector</a>
-         <a href="#" class="btn sonota" onclick="location.href='https://github.com/BadMan-Client/BadMan-Releases'">Badman_Client</a>
-         <a href="#" class="btn sonota" onclick="location.href='https://cdn.discordapp.com\attachments\1046749393732255775\1067922255146922086\EzCrystals.zip'">Ezcrystal_Client_sorce_code</a>
-         <a href="#" class="btn sonota" onclick="location.href='https://github.com/Cheatable/FatalityClient'">Fatality_client_sorce(trashClient)</a>
+      <h2></h2>
          <h1 class="Links">Link</h1>
          <a href="#" class="btn sonota" onclick="location.href='https://mogu.holopirates.moe'">holopirates(torrent)</a>
          <a href="#" class="btn sonota" onclick="location.href='https://japaneseasmr.com'">japaneseasmr</a>
          <a href="#" class="btn sonota" onclick="location.href='https://hentaiasmr.moe'">HentaiAsmr</a>
          <a href="#" class="btn sonota" onclick="location.href='https://kemono.party/artists'">Kemono</a>
          <a href="#" class="btn sonota" onclick="location.href='https://stash.kitsu.red'">Fc2archived</a>
-         <a href="#" class="btn sonota" onclick="location.href='https://mega.nz/folder/rwgmjLLB#zfQ3EQ7aJPXEpCpM4wm_7A'">Hololive_wallpaper_Cracked</a>
-      <h4>ㅤㅤ</h4>
-      <h4>ㅤㅤ</h4>
-      <h4>ㅤㅤ</h4>
-      <h2 class="Linkk">Discord</h2>
-      <iframe src="https://discord.com/widget?id=1013737642183114824&theme=white" width="1200" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+         <a href="#" class="btn sonota" onclick="location.href='https://mega.nz/folder/rwgmjLLB#zfQ3EQ7aJPXEpCpM4wm_7A'">HololiveWallpaperCracked</a>
+         <a href="#" class="btn sonota" onclick="location.href='https://portableapps.com'">Portableapps</a>
+         <a href="#" class="btn sonota" onclick="location.href='https://www.sigmajello.ga'">SigmaArchiveSite</a>
+         <a href="#" class="btn sonota" onclick="location.href='https://fdpinfo.github.io/next/'">FdpClientsite</a>
+         <h1 class="Links">Discord Invite Rinks</h1>
+         <a href="#" class="btn sonota" onclick="location.href='https://discord.gg/abj'">Antibanjapan</a>
+         <a href="#" class="btn sonota" onclick="location.href='https://discord.gg/Holopirates'">Holopirates</a>
+         <a href="#" class="btn sonota" onclick="location.href='https://discord.gg/cocomelon'">Ambrosial</a>
+         <a href="#" class="btn sonota" onclick="location.href='https://discord.gg/minecraft'">Minecraft</a>
+         <a href="#" class="btn sonota" onclick="location.href='https://discord.gg/yuzusoft'">Yuzusoftfanserver</a>
+         <a href="#" class="btn sonota" onclick="location.href='https://discord.gg/horion'">Horion</a>
+         <a href="#" class="btn sonota" onclick="location.href='https://discord.gg/Toolbox'">Toolbox</a>
+         <a href="#" class="btn sonota" onclick="location.href='https://discord.gg/Trollinc'">Troll.inc</a>
+         <h1 class="Links">Download</h1>
+         <a href="#" class="btn sonota" onclick="location.href='https://apkadmin.com/30nn9z4h7cbd/________________________________________________________feat.______________2.4.0_mod_signed_fix.apk.html'">ProjectSekaiModapk</a>
+         <a href="#" class="btn sonota" onclick="location.href='https://uploadrar.com/9ic1kbtbami0'">YoukaiwatchpunipuniModapk</a>
+         <a href="#" class="btn sonota" onclick="location.href='https://github.com/disepi/ambrosial/releases/tag/1.5'">Ambrosial</a>
+         <a href="#" class="btn sonota" onclick="location.href='https://horion.download'">Horion</a>
+         <a href="#" class="btn sonota" onclick="location.href='https://github.com/BadMan-Client/BadMan-Releases'">BadmanClient</a>
+         <a href="#" class="btn sonota" onclick="location.href='https://cdn.discordapp.com\attachments\1046749393732255775\1067922255146922086\EzCrystals.zip'">EzcrystalClientsorcecode</a>
+         <a href="#" class="btn sonota" onclick="location.href='https://github.com/Cheatable/FatalityClient'">Fatalityclientsorce</a>
+    </html>
