--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-    <!DOCTYPE html>
+   <!DOCTYPE html>
     <!-- saved from url=(0022)https://ktxxxx0828.github.io/KTsite/ -->
      <title>K_xXxX</title>
       <link rel="shortcut icon" href="Aqua.ico">
@@ -10,10 +10,10 @@
         please join discord↓
         discord.gg/uBhTBaQy4K
        ">
+       <div class>
        <div class="Image"></div>
        <a class="header-title">KTsite</a>
        <a class="header-title2">The Official KTsites.</a>
-       <a class="header-title3">Plz sub to my channel, and join my discord.</a>
        <div class="scroll-down"></div>
        <header>
          <div class="container">
@@ -23,36 +23,31 @@
             <div class="header-right">
            <a class="head" href="https://discord.gg/uBhTBaQy4K">Discord</a>
           <a class="head" href="https://Youtube.com/@KTontop">youtube</a>
-        </a>
+          <a class="KTsite" href="#">KTsite</a>
          </div>
        </div>
        </header>
+      </head>
        <link rel="stylesheet" type="text/css" href="stylesheet.css">
-        <h1><h1>
+       <div class="cont">Video
+       <iframe width="1200" height="422" src="https://www.youtube.com/embed/mIGtoo9TygY" title="Animation skinpack release!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+       4dskin video coming soon:)
+       </div>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-      </head>
-    <html lang="en_US">
-      <h2></h2>
          <h1 class="Links">Link</h1>
          <a href="#" class="btn sonota" onclick="location.href='https://mogu.holopirates.moe'">holopirates(torrent)</a>
-         <a href="#" class="btn sonota" onclick="location.href='https://japaneseasmr.com'">japaneseasmr</a>
-         <a href="#" class="btn sonota" onclick="location.href='https://hentaiasmr.moe'">HentaiAsmr</a>
-         <a href="#" class="btn sonota" onclick="location.href='https://kemono.party/artists'">Kemono</a>
-         <a href="#" class="btn sonota" onclick="location.href='https://stash.kitsu.red'">Fc2archived</a>
          <a href="#" class="btn sonota" onclick="location.href='https://mega.nz/folder/rwgmjLLB#zfQ3EQ7aJPXEpCpM4wm_7A'">HololiveWallpaperCracked</a>
          <a href="#" class="btn sonota" onclick="location.href='https://portableapps.com'">Portableapps</a>
          <a href="#" class="btn sonota" onclick="location.href='https://www.sigmajello.ga'">SigmaArchiveSite</a>
-         <a href="#" class="btn sonota" onclick="location.href='https://fdpinfo.github.io/next/'">FdpClientsite</a>
-         <h1 class="Links">Discord Invite Rinks</h1>
-         <a href="#" class="btn sonota" onclick="location.href='https://discord.gg/abj'">Antibanjapan</a>
-         <a href="#" class="btn sonota" onclick="location.href='https://discord.gg/Holopirates'">Holopirates</a>
-         <a href="#" class="btn sonota" onclick="location.href='https://discord.gg/cocomelon'">Ambrosial</a>
-         <a href="#" class="btn sonota" onclick="location.href='https://discord.gg/minecraft'">Minecraft</a>
-         <a href="#" class="btn sonota" onclick="location.href='https://discord.gg/yuzusoft'">Yuzusoftfanserver</a>
-         <a href="#" class="btn sonota" onclick="location.href='https://discord.gg/horion'">Horion</a>
-         <a href="#" class="btn sonota" onclick="location.href='https://discord.gg/Toolbox'">Toolbox</a>
-         <a href="#" class="btn sonota" onclick="location.href='https://discord.gg/Trollinc'">Troll.inc</a>
+         <h1 class="Links">IllugicalLinks</h1>
+         <a href="#" class="btn sonota" onclick="location.href='https://japaneseasmr.com'">japaneseasmr</a>
+         <a href="#" class="btn sonota" onclick="location.href='https://hentaiasmr.moe'">HentaiAsmr</a>
+         <a href="#" class="btn sonota" onclick="location.href='https://kemono.party/artists'">Kemono</a>
+         <a href="#" class="btn sonota" onclick="location.href='https://stash.kitsu.red'">Fc2archived(stopped)</a>
+         <a href="#" class="btn sonota" onclick="location.href='https://nyaa.si'">Nyaa</a>
+         <a href="#" class="btn sonota" onclick="location.href='https://fitgirl-repacks.site'">Fitgirl-repacks(Gamecrack)</a>
+         <a href="#" class="btn sonota" onclick="location.href='https://cracked-games.org/'">Game crack</a>
          <h1 class="Links">Download</h1>
          <a href="#" class="btn sonota" onclick="location.href='https://apkadmin.com/30nn9z4h7cbd/________________________________________________________feat.______________2.4.0_mod_signed_fix.apk.html'">ProjectSekaiModapk</a>
          <a href="#" class="btn sonota" onclick="location.href='https://uploadrar.com/9ic1kbtbami0'">YoukaiwatchpunipuniModapk</a>
@@ -60,5 +55,13 @@
          <a href="#" class="btn sonota" onclick="location.href='https://horion.download'">Horion</a>
          <a href="#" class="btn sonota" onclick="location.href='https://github.com/BadMan-Client/BadMan-Releases'">BadmanClient</a>
          <a href="#" class="btn sonota" onclick="location.href='https://cdn.discordapp.com\attachments\1046749393732255775\1067922255146922086\EzCrystals.zip'">EzcrystalClientsorcecode</a>
-         <a href="#" class="btn sonota" onclick="location.href='https://github.com/Cheatable/FatalityClient'">Fatalityclientsorce</a>
-    </html>
+         <a href="a" class="btn sonota" onclick="location.href='https://github.com/Cheatable/FatalityClient'">Fatalityclientsorce</a>
+         <div class="cont">Darkweb(.onion)
+          <a href="#" class="btn sonota" onclick="location.href='http://haystak5njsmn2hqkewecpaxetahtwhsbsa64jom2k22z5afxhnpxfid.onion/'">haystack</a>
+          <a href="#" class="btn sonota" onclick="location.href='http://juhanurmihxlp77nkq76byazcldy2hlmovfu2epvl5ankdibsot4csyd.onion/'">Ahmia</a>
+          <a href="#" class="btn sonota" onclick="location.href='http://xmh57jrknzkhv6y3ls3ubitzfqnkrwxhopf5aygthi7d6rplyvk3noyd.onion/'">Torch</a>
+          <a href="#" class="btn sonota" onclick="location.href='http://zqktlwiuavvvqqt4ybvgvi7tyo4hjl5xgfuvpdf6otjiycgwqbym2qad.onion/wiki/'">HiddenWIKI</a>
+          <a href="#" class="btn sonota" onclick="location.href='http://542pazzyrn47artvt3kbrio4rvohpcztwjpd755finbbao2tc54zbmid.onion/'">Darkweb2022</a>
+          <a href="#" class="btn sonota" onclick="location.href='http://btcgnug6zkfw24xdjtprzi3mx2b2m6vzq455tvoy77hcevsclqblivqd.onion/'">Darkmarket</a>
+         </div>
+   </html>
