--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
        ">
        <div class>
        <div class="Image"></div>
+       <a class="header-title">KTsite</a>
        <a class="header-title2">The Official KTsites.</a>
        <div class="scroll-down"></div>
        <header>
